--- a/css/style.css
+++ b/css/style.css
@@ -16,4 +16,117 @@ h2 {
 	font-size: 24pt;
 	line-height: 30pt;
 }
-	
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.centered {
+	margin: 0 auto;
+	padding: 0 10px;
+	width: 940px
+	min-height: 70px;
+
+}	
+
+.small_logo {
+	float: left;
+	width: 150px;
+	margin-right: 10px;
+	background-color: rgba(0, 255, 255, 0.2);
+}
+
+.top_navigation {
+	float: left;
+	width: 540px;
+	background-color: rgba(0, 255, 255, 0.2);
+}
+
+.entrance {
+	float: right;
+	width: 140px;
+	background-color: rgba(0, 255, 255, 0.2);
+}
+
+.headline {
+	display: inline;
+	min-width: 320px;
+	height: 86px;
+	margin-top: 54px;
+	margin-right: auto;
+	background-color: rgba(0, 255, 255, 0.2);
+}
+
+.aside {
+	float: left;
+	width: 220px;
+	min-height: 573px;
+	margin-top: 44px;
+	background-color: rgba(0, 255, 255, 0.2);
+}
+
+.catalog {
+	width: 720px;
+	min-height: 618px;
+	margin-top: 47px;
+	margin-left: auto;
+	background-color: rgba(0, 255, 255, 0.2);
+}
+
+.catalog-item {
+	float: left;
+	width: 220px;
+	margin: 0 10px;
+	margin-bottom: 20px;
+}
+
+.paginator {
+	clear: both;
+	min-width: 300px;
+	height: 43px;
+	margin-left: 240px;
+	margin-top: 20px;
+	background-color: rgba(0, 255, 255, 0.2)
+}
+
+a.paginator,
+.paginator .button_active {
+	display: inline-block;
+}
+
+.main_footer {
+	margin-top: 50px;
+	background-color: rgba(0, 255, 255, 0.2)
+}
+
+.footer_contacts {
+	float: left;
+	width: 310px;
+	min-height: 86px;
+	margin-right: 80px;
+	background-color: rgba(0, 255, 255, 0.2);
+}
+
+.footer_social {
+	float: left;
+	width: 160px;
+	min-height: 86px;
+	background-color: rgba(0, 255, 255, 0.2)
+}
+
+.footer_copyright {
+	float: right;
+	width: 150px;
+	min-height: 86px;
+	background-color: rgba(0, 255, 255, 0.2)
+}
+
+
+
+
+
+
+
+
