--- a/css/style.css
+++ b/css/style.css
@@ -35,19 +35,19 @@ h2 {
 	float: left;
 	width: 150px;
 	margin-right: 10px;
-	background-color: rgba(0, 255, 255, 0.2);
+	background-color: rgba(0, 255, 0, 0.2);
 }
 
 .top_navigation {
 	float: left;
 	width: 540px;
-	background-color: rgba(0, 255, 255, 0.2);
+	background-color: rgba(0, 255, 0, 0.2);
 }
 
 .entrance {
 	float: right;
 	width: 140px;
-	background-color: rgba(0, 255, 255, 0.2);
+	background-color: rgba(0, 255, 0, 0.2);
 }
 
 .headline {
@@ -56,7 +56,7 @@ h2 {
 	height: 86px;
 	margin-top: 54px;
 	margin-right: auto;
-	background-color: rgba(0, 255, 255, 0.2);
+	background-color: rgba(0, 255, 0, 0.2);
 }
 
 .aside {
@@ -64,7 +64,7 @@ h2 {
 	width: 220px;
 	min-height: 573px;
 	margin-top: 44px;
-	background-color: rgba(0, 255, 255, 0.2);
+	background-color: rgba(0, 255, 0, 0.2);
 }
 
 .catalog {
@@ -72,7 +72,7 @@ h2 {
 	min-height: 618px;
 	margin-top: 47px;
 	margin-left: auto;
-	background-color: rgba(0, 255, 255, 0.2);
+	background-color: rgba(0, 255, 0, 0.2);
 }
 
 .catalog-item {
@@ -80,6 +80,7 @@ h2 {
 	width: 220px;
 	margin: 0 10px;
 	margin-bottom: 20px;
+	background-color: rgba(255, 0, 0, 0.2)
 }
 
 .paginator {
@@ -88,7 +89,7 @@ h2 {
 	height: 43px;
 	margin-left: 240px;
 	margin-top: 20px;
-	background-color: rgba(0, 255, 255, 0.2)
+	background-color: rgba(0, 255, 0, 0.2)
 }
 
 a.paginator,
@@ -96,9 +97,35 @@ a.paginator,
 	display: inline-block;
 }
 
+.item_gallery {
+	float: left;
+	width: 480px;
+	min-height: 670px;
+	margin: 0 10px;
+	margin-bottom: 30px;
+	background-color: rgba(255, 0, 0, 0.2)
+}
+
+.item_big,
+.item_small {
+	float: left;
+	margin: 10px;
+	margin-bottom: 20px;
+}
+
+.item_description {
+	float: right;
+	width: 390px;
+	min-height: 670px;
+	margin: 0 10px;
+	margin-top: 22px;
+	margin-bottom: 20px;
+	background-color: rgba(255, 0, 0, 0.2)
+}
+
 .main_footer {
 	margin-top: 50px;
-	background-color: rgba(0, 255, 255, 0.2)
+	background-color: rgba(255, 0, 0, 0.2)
 }
 
 .footer_contacts {
@@ -106,21 +133,21 @@ a.paginator,
 	width: 310px;
 	min-height: 86px;
 	margin-right: 80px;
-	background-color: rgba(0, 255, 255, 0.2);
+	background-color: rgba(0, 255, 0, 0.2);
 }
 
 .footer_social {
 	float: left;
 	width: 160px;
 	min-height: 86px;
-	background-color: rgba(0, 255, 255, 0.2)
+	background-color: rgba(0, 255, 0, 0.2)
 }
 
 .footer_copyright {
 	float: right;
 	width: 150px;
 	min-height: 86px;
-	background-color: rgba(0, 255, 255, 0.2)
+	background-color: rgba(0, 255, 0, 0.2)
 }
 
 
